# Pratice-AutoClicker

./: CMakeLists.txt  README.md  installer.nsi
res/: resource.rc
src/: main.cpp
src/core/: AutoClicker.cpp  AutoClicker.h  ClickHandler.cpp  ClickHandler.h  ConfigManager.cpp  ConfigManager.h
src/platform/win/: CustomCPSModal.cpp  CustomCPSModal.h  CustomNotification.cpp  CustomNotification.h  FullscreenDetector.cpp  FullscreenDetector.h  InputHook.cpp  InputHook.h  Notification.cpp  Notification.h  Registry.cpp  Registry.h  ToggleKeyModal.cpp  ToggleKeyModal.h  TrayIcon.cpp  TrayIcon.h
src/utils/: Logger.cpp  Logger.h
